# pycon-etl

./: .dockerignore  .env.sh  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  airflow.cfg  airflow.test.cfg  constraints-3.8.txt  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  spelling_wordlist.txt  webserver_config.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: dockerimage.yaml  dockerimage.yml  docpublish.yml  python.yml
CONTRIBUTING/: index.html
DEPLOYMENT/: index.html
MAINTENANCE/: index.html
cli/: default_data_field_names.txt  default_meta_field_mapping.json  example-attendees.csv  example-orders.csv  load_kktix_csv.py
cli/2025/: corporate_data_field_names.txt  individual_data_field_names.txt  reserved_data_field_names.txt
contrib/: README.md  kktix_bq_etl.py  kktix_bq_etl.sh  upload-kktix-ticket-csv-to-bigquery.py  upload-kktix-ticket-csv-to-bigquery.sh
contrib/data/: corporate-attendees-2018.csv  corporate-attendees-2019.csv  corporate-attendees-2020.csv  individual-attendees-2018.csv  individual-attendees-2019.csv  individual-attendees-2020.csv  reserved-attendees-2018.csv  reserved-attendees-2019.csv  reserved-attendees-2020.csv
contrib/fb_page_insights/: fb_page_insights_data_uploader.py
contrib/survey_cake/: upload-survey-cake-csv-to-bigquery.py
contrib/survey_cake/udfs/: survey_cake_csv_uploader.py
dags/: airflow-log-cleanup.py  airflow_log_cleanup.py  airlfow-db-cleanup.py  config.py
dags/app/: discord.py
dags/app/channel_reminder/: dag.py  udf.py
dags/app/channel_reminder/udfs/: discord.py
dags/app/cloudflare_bot/: dag.py
dags/app/finance_bot/: dag.py  udf.py
dags/app/proposal_reminder/: dag.py  udf.py
dags/app/team_registration_bot/: dag.py  udf.py
dags/app/twitter_post_notification_bot/: dag.py  udf.py
dags/app/user_profile/: dag.py  example_job_title.txt  example_organization.txt  genai.py  main.sh  merge.py  query.py  udf.py
dags/fixtures/: data_questionnaire.csv
dags/ods/fb_page_insights/dags/: fb_page_insights_2_bigquery.py
dags/ods/fb_page_insights/udfs/: fb_page_insights_data_uploader.py
dags/ods/fb_post_insights/: dag.py  udfs.py
dags/ods/google_search_console/: dag.py
dags/ods/google_search_console/udfs/: google_search.py
dags/ods/ig_post_insights/: dags.py  udfs.py
dags/ods/kktix_ticket_orders/: discord_team_registration_bot_dag.py  kktix_backfill_dag.py  kktix_dag.py  kktix_refund_dag.py  klaviyo_backfill_dag.py  load_csv.py  load_offline_csv.py
dags/ods/kktix_ticket_orders/sqls/: create_table.sql
dags/ods/kktix_ticket_orders/udfs/: batch_kktix2mailer.py  bigquery_loader.py  discord_bot.py  gather_town_loader.py  kktix_api.py  kktix_bq_dwd_etl.py  kktix_loader.py  kktix_refund.py  kktix_transformer.py  klaviyo_loader.py  klaviyo_mailer.py
dags/ods/linkedin_post_insights/: dags.py  udfs.py
dags/ods/opening_crawler/dags/: cakeresume_crawler.py
dags/ods/opening_crawler/udfs/: crawlers.py
dags/ods/post-event-report/dags/: generate-post-event-report.py
dags/ods/twitter_post_insights/: dags.py  udfs.py
dags/ods/youtube/dags/: dag.py
dags/opening_crawler/dags/: cakeresume_crawler.py
dags/opening_crawler/udfs/: crawlers.py
dags/tests/: test_cakeresume_uploader.py
dags/utils/: hook_related.py
dags/utils/posts_insights/: base.py  facebook.py  instagram.py  linkedin.py  twitter.py
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  MAINTENANCE.md  README.md  index.md  poc-social-media-asset-watermark.md
fixtures/: airflow.test.cfg
logs/scheduler/: latest
patch/: 0082_3_1_0_make_bundle_name_not_nullable.py  0093_2_2_0_taskinstance_keyed_to_dagrun.py  0097_3_2_0_enforce_log_event_and_dag_is_stale_not_null.py  0142_2_9_2_fix_inconsistency_between_ORM_and_migration_files.py  dag.py  serialized_objects.py  utils.py
patch/versions/: 0017_2_9_2_fix_inconsistency_between_ORM_and_migration_files.py  0047_3_0_0_add_dag_versioning.py  0060_2_0_0_remove_id_column_from_xcom.py  0064_2_0_0_add_unique_constraint_to_conn_id.py  0073_2_0_0_prefix_dag_permissions.py  0093_2_2_0_taskinstance_keyed_to_dagrun.py  0100_2_3_0_add_taskmap_and_map_id_on_taskinstance.py  0110_2_3_2_add_cascade_to_dag_tag_foreignkey.py  0142_2_9_2_fix_inconsistency_between_ORM_and_migration_files.py
scripts/ci/prek/: check_airflow_version_consistency.py
search/: search_index.json
tests/: conftest.py  data_questionnaire.csv  test_cakeresume_uploader.py  test_crawler.py  test_dag_integrity.py
tests/app/: test_user_profile_udf.py
tests/kktix_ticket_orders/: test_klaviyo_loader.py  test_transformer.py
triggers/: finance_report.py
(+7 files in other folders)
